# builtwithdjango

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PRODUCT.md  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  claude-code-review.yml  deploy.yml
api/: serializers.py  tests.py  urls.py  views.py
blog/: feeds.py  models.py  tasks.py  urls.py  views.py
blog/migrations/: 0012_alter_post_type.py
blog/templatetags/: markdown_extras.py
builtwithdjango/: ai.py  analytics.py  notifications.py  sentry_utils.py  settings.py  sitemaps.py  stripe_client.py  test_settings.py  urls.py  views.py
builtwithdjango/tests/: test_analytics.py  test_notifications.py  test_sentry_utils.py  test_seo.py
deployment/: Dockerfile  Dockerfile.python  entrypoint.sh
developers/: models.py  views.py
developers/migrations/: 0002_alter_developer_timezone.py
docs/sponsorship/: tj-alerts-bwd-outreach-sequences.md
frontend/src/: sentry.js
frontend/webpack/: webpack.config.prod.js
jobs/: models.py  tasks.py  tests.py  views.py
makers/: forms.py
newsletter/: tasks.py  tests.py  utils.py  views.py
pages/: forms.py  tests.py  views.py
pages/templatetags/: seo.py
podcast/: views.py
projects/: admin.py  forms.py  models.py  querysets.py  tasks.py  tests.py  urls.py  utils.py  views.py
projects/migrations/: 0031_like_unique_author_project.py
templates/: base.html
templates/account/: email_confirm.html  login.html  logout.html  profile-update.html  signup.html  upgrade-account.html
templates/blog/: all_articles.html  all_posts.html  create-guide-comment.html  post_detail.html
templates/components/: bottom-right-corner-ad.html  job-item.html  newsletter.html  post-card.html  project-card.html  project-likes.html  seo_meta.html
templates/developers/: _developer_schema.json  (+4 more)
tools/: views.py
users/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py  webhooks.py
(+44 files in other folders)
