[tool.poetry]
name = "builtwithdjango"
version = "0.4.1"
description = "Source code for the builtwithdjango.com website."
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.djlint]
profile = "django"
ignore = "H006,H023,H031,H021,H005,H030,H020,H016,D018,H011"
exclude = "support.html"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.11"
django-autoslug = "^1.9.7"
django-environ = "^0.13.0"
djangorestframework = "^3.11.0"
gunicorn = "^26.0.0"
requests = "^2.23.0"
django-component = "^0.1.6"
Markdown = "^3.3.4"
django-model-utils = "^5.0.0"
django-extensions = "^4.1"
django-filter = "^25.2"
django-rest-auth = {extras = ["with_social"], version = "^0.9.5"}
cloudinary = "^1.28.1"
django-widget-tweaks = "^1.4.12"
python-webpack-boilerplate = "^1.0.0"
Pygments = "^2.12.0"
django-robots = "^6.1"
pytz = "^2026.2"
psycopg2 = "^2.9.5"
whitenoise = "^6.4.0"
django-storages = "^1.13.2"
boto3 = "^1.26.154"
posthog = "^7.15.4"
uvicorn = "^0.48.0"
django = "^5.2.14"
redis = "^7.4.0"
django-anymail = {extras = ["mailgun"], version = "^15.0"}
ipython = "^9.13.0"
structlog = "^25.5.0"
django-structlog = "^10.0.0"
pydantic-ai = "^1.102.0"
twikit = "^2.3.3"
google-genai = "^2.6.0"
logfire = "^4.3.4"
plotext = "^5.3.2"
sentry-sdk = "^2.41.0"
structlog-sentry = "^2.2.1"
django-q2 = {extras = ["sentry"], version = "^1.8.0"}
django-allauth = "^65.12.0"
oauthlib = "^3.3.1"
requests-oauthlib = "^2.0.0"
django-oauth-toolkit = "^3.1.0"
pillow = "^12.0.0"
dj-stripe = "^2.10.3"
stripe = "^15.1.0"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
pylint = "^4.0.5"
pre-commit = "^4.6.0"
pylint-django = "^2.7.0"
kolo = "^3.1.0"
isort = "^8.0.1"
djlint = "^1.36.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
